add fields slug
